Added Status Display Type combobox

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -25,40 +25,22 @@
       <setting name="id" serializeAs="String">
         <value />
       </setting>
+      <setting name="type" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="name" serializeAs="String">
+        <value />
+      </setting>
       <setting name="details" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="detailsURL" serializeAs="String">
         <value />
       </setting>
       <setting name="state" serializeAs="String">
         <value />
       </setting>
-      <setting name="smallKey" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="smallText" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="largeKey" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="largeText" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="startMinimized" serializeAs="String">
-        <value>False</value>
-      </setting>
-      <setting name="runOnStartup" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="timestamps" serializeAs="String">
-        <value>0</value>
-      </setting>
-      <setting name="firstStart" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="checkUpdates" serializeAs="String">
-        <value>True</value>
-      </setting>
-      <setting name="ignoreVersion" serializeAs="String">
+      <setting name="stateURL" serializeAs="String">
         <value />
       </setting>
       <setting name="partySize" serializeAs="String">
@@ -67,8 +49,29 @@
       <setting name="partyMax" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="timestamps" serializeAs="String">
+        <value>0</value>
+      </setting>
       <setting name="customTimestamp" serializeAs="String">
         <value>1969-01-01</value>
+      </setting>
+      <setting name="customTimestampEndEnabled" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="customTimestampEnd" serializeAs="String">
+        <value>1969-01-01</value>
+      </setting>
+      <setting name="largeKey" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="largeText" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="smallKey" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="smallText" serializeAs="String">
+        <value />
       </setting>
       <setting name="button1Text" serializeAs="String">
         <value />
@@ -80,6 +83,21 @@
         <value />
       </setting>
       <setting name="button2URL" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="startMinimized" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="runOnStartup" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="firstStart" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="checkUpdates" serializeAs="String">
+        <value>True</value>
+      </setting>
+      <setting name="ignoreVersion" serializeAs="String">
         <value />
       </setting>
       <setting name="language" serializeAs="String">
@@ -109,23 +127,8 @@
       <setting name="darkMode" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="type" serializeAs="String">
+      <setting name="display" serializeAs="String">
         <value>0</value>
-      </setting>
-      <setting name="name" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="detailsURL" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="stateURL" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="customTimestampEnd" serializeAs="String">
-        <value>1969-01-01</value>
-      </setting>
-      <setting name="customTimestampEndEnabled" serializeAs="String">
-        <value>False</value>
       </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
