Adde image URL fields, updated TabIndexes

--- a/CustomRPC/App.config
+++ b/CustomRPC/App.config
@@ -28,6 +28,9 @@
       <setting name="type" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="display" serializeAs="String">
+        <value>0</value>
+      </setting>
       <setting name="name" serializeAs="String">
         <value />
       </setting>
@@ -127,8 +130,11 @@
       <setting name="darkMode" serializeAs="String">
         <value>True</value>
       </setting>
-      <setting name="display" serializeAs="String">
-        <value>0</value>
+      <setting name="largeURL" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="smallURL" serializeAs="String">
+        <value />
       </setting>
     </CustomRPC.Properties.Settings>
   </userSettings>
